# code2vec

./: .gitignore  README.md  code2vec.py  config.py  preprocess.sh  pyproject.toml  tensorflow_model.py  train.sh
