[tool.poetry]
name = "code2vec"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.7.0"
tensorflow = {path = "/home/itakeshi/projects/misc/tensorflow/pip_package/tensorflow-2.0.1-cp37-cp37m-linux_x86_64.whl"}
javalang = "^0.12.0"
pillow = "^6.1"
scipy = "^1.3"
matplotlib = "^3.1"
scikit-learn = "^0.21.3"
pandas = "^0.25.1"
opencv-python = "^4.1"

[tool.poetry.dev-dependencies]
mypy = "^0.720.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
